docs/apache-airflow-providers-google/10.7.0/_sources/_api/tests/system/providers/google/cloud/automl/example_automl_vision_classification/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.automl.example_automl_vision_classification`
=========================================================================================

.. py:module:: tests.system.providers.google.cloud.automl.example_automl_vision_classification

.. autoapi-nested-parse::

   Example Airflow DAG that uses Google AutoML services.



Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_automl_vision_clss'

   

.. py:data:: ENV_ID

   

.. py:data:: GCP_PROJECT_ID

   

.. py:data:: GCP_AUTOML_LOCATION
   :value: 'us-central1'

   

.. py:data:: DATA_SAMPLE_GCS_BUCKET_NAME

   

.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'

   

.. py:data:: DATASET_NAME

   

.. py:data:: DATASET

   

.. py:data:: AUTOML_DATASET_BUCKET

   

.. py:data:: IMPORT_INPUT_CONFIG

   

.. py:data:: MODEL_NAME
   :value: 'vision_clss_test_model'

   

.. py:data:: MODEL

   

.. py:data:: CSV_FILE_NAME
   :value: 'vision_classification.csv'

   

.. py:data:: GCS_FILE_PATH

   

.. py:data:: DESTINATION_FILE_PATH

   

.. py:data:: extract_object_id

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

